# audio_agent

./: .example.env  .gitignore  README.md  pyproject.toml  requirements.txt
RealtimeSTT/: audio_recorder.py  safepipe.py
examples/: audio-to-audio-aws.py  audio-to-audio-local.py  audio-to-audio-nova-sonic.py  audio-to-audio_gemini.py
