[project]
name = "audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper==1.1.1",
    "halo==0.0.31",
    "kokoro>=0.9.4",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "openwakeword>=0.4.0",
    "pip>=25.1.1",
    "pvporcupine==1.9.5",
    "pyaudio==0.2.14",
    "python-dotenv>=1.1.0",
    "scipy==1.15.2",
    "sounddevice>=0.5.2",
    "soundfile==0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "webrtcvad-wheels==2.0.14",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
]
